# pm7calculator

./: MANIFEST.in  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  defaults.py
core/: __init__.py  calculator.py  parser.py  utils.py
environments/: __init__.py  colab.py  local.py
examples/: __init__.py  basic_usage.py  batch_processing.py
pm7calculator/: __init__.py  core.py  utils.py
tests/: __init__.py  test_calculator.py
