cd /noether/s0/dxb5775/pm7calculator

# Remove the problematic file
rm pyproject.toml

# Create a new, correctly formatted pyproject.toml
cat > pyproject.toml << 'EOF'
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm7calculator"
version = "1.0.0"
description = "Comprehensive PM7 quantum chemistry calculator for molecular property prediction"
readme = "README.md"
authors = [
    {name = "bhattadeb34", email = "bhattadeb34@psu.edu"}
]
license = {file = "LICENSE"}
keywords = [
    "quantum chemistry",
    "PM7", 
    "MOPAC",
    "molecular properties",
    "computational chemistry",
    "drug discovery",
    "materials science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry"
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "rdkit-pypi>=2021.9.1",
    "ase>=3.20.0"
]

[project.optional-dependencies]
colab = ["condacolab"]
visualization = ["matplotlib>=3.3.0", "seaborn>=0.11.0", "plotly>=5.0.0"]
dev = ["pytest>=6.0", "black", "flake8", "mypy"]
all = ["condacolab", "matplotlib>=3.3.0", "seaborn>=0.11.0", "plotly>=5.0.0"]

[project.urls]
Homepage = "https://github.com/bhattadeb34/pm7calculator"
Repository = "https://github.com/bhattadeb34/pm7calculator"
"Bug Reports" = "https://github.com/bhattadeb34/pm7calculator/issues"

[tool.setuptools]
packages = ["pm7calculator"]
EOF